--- a/coderdojo/scm/treasure-hunt/index.html
+++ b/coderdojo/scm/treasure-hunt/index.html
@@ -390,6 +390,7 @@
                     the help screen. At a high level we need to:</p>
                 <ol>
                     <li>Duplicate <span class="sprite">All Objects</span></li>
+                    <li>Remove all the code from the new sprite</li>
                     <li>Copy the code from <span class="sprite">Object-Dress</span> into the new sprite</li>
                     <li>Delete the 20 sprites (<span class="sprite">Object-Dress</span> to <span class="sprite">Object-Ring</span>)</li>
                     <li>Make the new sprite create 20 clones at start up (each clone has a different <span class="cat-variables">id</span>)</li>
