--- a/coderdojo/scm/treasure-hunt/index.html
+++ b/coderdojo/scm/treasure-hunt/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SCM - Treasure Hunt</title>
     <script defer src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
