--- a/coderdojo/scm/treasure-hunt/index.html
+++ b/coderdojo/scm/treasure-hunt/index.html
@@ -395,7 +395,7 @@
         <section x-data="{open: false}">
             <p class="idea" @click="open = !open"><strong>Idea #3</strong> - Make the objects go to different positions.</p>
             <div x-show="open">
-                <p>Currently the game is a bit boring because the objects are always at the same positions.</p>
+                <p>Currently the game is a bit boring because the objects are always in the same positions.</p>
                 <p>One way to improve this is to make each object go to a random position using <span class="cat-motion">go to (random
                         position)</span> when the game starts. However this has the disadvantage that the objects could overlap each
                     other or be too easy to see against the backdrop.</p>
