--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -32,6 +32,11 @@
                     <li><a href="https://ugc.futurelearn.com/uploads/files/bb/b7/bbb7596f-dbc6-4a06-a30d-0f6bce2d5547/Cheat-sheet-tunring-Scratch-into-Python-A3-DIGITAL.pdf">Cheatsheet - Turning Scratch into Python</a></li>
                 </ul>
             </li>
+            <li><strong>Piper Make</strong>: <a href="https://make.playpiper.com/">main</a></li>
+            <li><strong>Wokwi</strong>: <a href="https://wokwi.com/">main</a></li>
+            <li><strong>TinkerCAD</strong>:
+                <a href="https://www.tinkercad.com/dashboard">Main page</a>
+            </li>
             <li><strong>Snap!</strong>: <a href="https://snap.berkeley.edu/">main</a></li>
             <li><strong>MIT App Inventor</strong>:
                 <a href="http://code.appinventor.mit.edu">main</a>
