--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -32,10 +32,11 @@
                     <li><a href="https://ugc.futurelearn.com/uploads/files/bb/b7/bbb7596f-dbc6-4a06-a30d-0f6bce2d5547/Cheat-sheet-tunring-Scratch-into-Python-A3-DIGITAL.pdf">Cheatsheet - Turning Scratch into Python</a></li>
                 </ul>
             </li>
+            <li><strong>Platform IO</strong>: <a href="https://docs.platformio.org">main</a></li>
             <li><strong>Piper Make</strong>: <a href="https://make.playpiper.com/">main</a></li>
             <li><strong>Wokwi</strong>: <a href="https://wokwi.com/">main</a></li>
             <li><strong>TinkerCAD</strong>:
-                <a href="https://www.tinkercad.com/dashboard">Main page</a>
+                <a href="https://www.tinkercad.com/dashboard">main</a>
             </li>
             <li><strong>Snap!</strong>: <a href="https://snap.berkeley.edu/">main</a></li>
             <li><strong>MIT App Inventor</strong>:
@@ -222,6 +223,10 @@
                     <a href="https://kivy.org/#gallery">gallery</a>
                     <a href="https://kivy.org/#support">help</a>
                     <a href="https://github.com/niavlys/memoryKivy">memoryKivy</a>
+                </li>
+                <li><strong>guizero</strong>:
+                    <a href="https://magpi.raspberrypi.com/books/create-guis">pdf</a>
+                    <a href="https://lawsie.github.io/guizero/">docs</a>
                 </li>
             </ul>
         </section>
