--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -203,7 +203,7 @@
             <ul>
                 <li><strong>Turtle</strong>:
                     <a
-                        href="https://realpython.com/beginners-guide-python-turtle/#final-project-the-python-turtle-race">tutorial</a>
+                        href="https://realpython.com/beginners-guide-python-turtle">tutorial</a>
                     <a href="https://docs.python.org/3/library/turtle.html">reference</a>
                 </li>
                 <li><strong>Pygame</strong>:
