--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -465,6 +465,7 @@
     <section>
         <h2>GitHub</h2>
         <ul>
+            <li><a href="https://ohmygit.org">Oh My Git! (game)</a></li>
             <li><a href="https://github.com/">main</a></li>
             <li><a href="https://guides.github.com/activities/hello-world/">hello-world</a></li>
             <li><a href="https://help.github.com/en">help</a></li>
