--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -465,10 +465,20 @@
     <section>
         <h2>GitHub</h2>
         <ul>
+            <li><strong>Tower</strong>:
+                <a href="https://www.git-tower.com/learn/git/ebook/">book</a>
+            </li>
+            <li><strong>Git</strong>:
+                <a href="https://git-scm.com/">main</a>
+            </li>
+            <li><strong>GitHub</strong>:
+                <a href="https://guides.github.com/activities/hello-world/">hello-world</a>
+                <a href="https://lab.github.com/">Labs</a>
+                <a href="https://github.com/">main</a>
+                <a href="https://help.github.com/en">help</a>
+            </li>
             <li><a href="https://ohmygit.org">Oh My Git! (game)</a></li>
-            <li><a href="https://github.com/">main</a></li>
-            <li><a href="https://guides.github.com/activities/hello-world/">hello-world</a></li>
-            <li><a href="https://help.github.com/en">help</a></li>
+            <li><a href="https://firstaidgit.io/#/">First Aid Git</a></li>
         </ul>
     </section>
 
