--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -14,9 +14,18 @@
         <h2>Programming with blocks (beginners)</h2>
         <ul>
             <li><strong>Games</strong>: <a href="https://blockly.games/">blockly.games</a></li>
-            <li><strong>MakeCode</strong>:
-                <a href="https://arcade.makecode.com/">Arcade</a>
-                <a href="https://arcade.makecode.com/docs">docs</a>
+            <li><strong><a href="https://makecode.com">MakeCode</a></strong>
+                <ul>
+                    <li><a href="https://arcade.makecode.com">Arcade</a></li>
+                    <li><a href="https://microbit.makecode.com">Microbit</a></li>
+                    <li><a href="https://minecraft.makecode.com">Minecraft</a> (requires Minecraft)</li>
+                    <li><a href="https://makecode.com/labs">Labs</a>
+                        <ul>
+                            <li><a href="https://hwestphal.github.io/pxt-turtle">Turtle</a></li>
+                            <li><a href="https://maker.makecode.com">Maker</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
             <li><strong>Scratch</strong>
                 <ul>
