Added more stuff

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -13,7 +13,8 @@
     <section>
         <h2>Programming with blocks (beginners)</h2>
         <ul>
-            <li><strong>Games</strong>: <a href="https://blockly.games/">blockly.games</a></li>
+            <li><strong>Games</strong>: <a href="https://blockly.games/">blockly.games</a> <a href="https://www.supercodingball.com/">Super Coding Ball</a></li>
+            <li><strong>Kodu Game Lab</strong>: <a href="https://www.kodugamelab.com/">main</a></li>
             <li><strong><a href="https://makecode.com">MakeCode</a></strong>
                 <ul>
                     <li><a href="https://arcade.makecode.com">Arcade</a></li>
@@ -73,9 +74,6 @@
                     href="https://www.youtube.com/playlist?list=PLRqwX-V7Uu6Zy51Q-x9tMWIv9cueOFTFA">video</a></li>
             <li><strong>The Nature of Code 2</strong>: <a
                     href="https://www.youtube.com/playlist?list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM">video</a></li>
-            <li><strong>Kadenze</strong>: <a
-                    href="https://www.kadenze.com/courses/introduction-to-programming-for-the-visual-arts-with-p5-js-vi/info">course</a>
-            </li>
             <li><strong>p5.js</strong>
                 <ul>
                     <li><a href="https://editor.p5js.org/nicoben/full/M2egTYWR">Keyboard events</a></li>
@@ -105,6 +103,7 @@
                 <li><strong>Computer Science Circles</strong>:
                     <a href="https://cscircles.cemc.uwaterloo.ca/">main</a>
                 </li>
+                <li><strong>Challenges</strong>: <a href="https://projecteuler.net/">Project Euler</a></li>
                 <li><strong>Zetcode tutorials</strong>:
                     <a href="http://zetcode.com/lang/python/">tutorial</a>
                     <a href="http://zetcode.com/python/fstring/">f-string</a>
@@ -131,11 +130,11 @@
                     <a href="https://realpython.com/">tutorials</a>
                     <a href="https://realpython.com/quizzes/">quizzes</a>
                 </li>
-                <!-- <li><strong>W3Schools</strong>:
+                <li><strong>W3Schools</strong>:
                     <a href="https://www.w3schools.com/python/default.asp">tutorial</a>
                     <a href="https://www.w3schools.com/python/python_examples.asp">examples</a>
                     <a href="https://www.w3schools.com/python/python_reference.asp">reference</a>
-                </li> -->
+                </li>
                 <li><strong>YouTube</strong>:
                     <a href="https://www.youtube.com/watch?v=_uQrJ0TkZlc">Python Tutorial - Python for Beginners - Learn
                         Python Programming [2020]</a>
@@ -153,14 +152,10 @@
             <ul>
                 <li><a href="https://py.checkio.org/">CheckIO</a></li>
                 <li><a href="https://www.codewars.com/">Codewars</a></li>
-                <li><a href="https://www.cambridge.org/codingclub-blackflag">Coding Club Black Flag</a></li>
                 <li><a href="https://www.programiz.com/learn-python">Learn Python on the Go (mobile app)</a></li>
-                <li><strong>Quizzes</strong>:
-                    <a href="https://realpython.com/quizzes/">RealPython</a>
-                </li>
                 <li><strong>Others</strong>
-                    <a href="https://codetheblocks.com/">Code the blocks</a>
                     <a href="https://www.hackinscience.org">HackInScience</a>
+                    <a href="https://projecteuler.net">Project Euler</a>
                 </li>
             </ul>
         </section>
@@ -170,6 +165,7 @@
             <ul>
                 <li><a href="https://repl.it/languages/python3">repl.it</a></li>
                 <li><a href="https://colab.research.google.com/">Colaboratory (Colab)</a></li>
+                <li><a href="https://think.cs.vt.edu/blockpy/blockpy/">BlockPy Editor</a></li>
                 <li><strong>PythonTutor</strong>:
                     <a
                         href="http://www.pythontutor.com/visualize.html#code=def%20fact%28n%29%3A%0A%20%20%20%20if%20n%20%3C%3D%201%3A%0A%20%20%20%20%20%20%20%20return%201%0A%20%20%20%20else%3A%0A%20%20%20%20%20%20%20%20return%20n%20*%20fact%28n%20-%201%29%0A%20%20%20%20%20%20%20%20%0Aprint%28%22Factorial%20of%205%20%3D%205!%20%3D%22,%20fact%285%29%29%0A%0Aclass%20Person%3A%0A%20%20%20%20def%20__init__%28self,%20name,%20age%29%3A%0A%20%20%20%20%20%20%20%20self.name%20%3D%20name%0A%20%20%20%20%20%20%20%20self.age%20%3D%20age%0A%20%20%20%20%20%20%20%20%0A%20%20%20%20def%20__repr__%28self%29%3A%0A%20%20%20%20%20%20%20%20return%20f%22%7Bself.name%7D%20%28%7Bself.age%7D%29%22%0A%20%20%20%20%20%20%20%20%0Apersons%20%3D%20%5B%0A%20%20%20%20Person%28%22Bob%22,%2035%29,%0A%20%20%20%20Person%28%22Alice%22,%2027%29,%0A%5D%0A%0Aprint%28persons%29%0A%0Acolors%20%3D%20%7B%0A%20%20%20%201%3A%20%28%22red%22,%20%22%23ff0000%22%29,%0A%20%20%20%202%3A%20%28%22green%22,%20%22%2300ff00%22%29,%0A%20%20%20%203%3A%20%28%22blue%22,%20%22%230000ff%22%29,%0A%7D%0A%0Aprint%28colors%29&cumulative=false&heapPrimitives=false&mode=edit&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&testCasesJSON=%5B%22assert%20fact%280%29%20%3D%3D%201%22,%22assert%20fact%281%29%20%3D%3D%201%22,%22assert%20fact%282%29%20%3D%3D%202%22,%22assert%20fact%283%29%20%3D%3D%206%22,%22assert%20fact%284%29%20%3D%3D%2024%22,%22assert%20fact%285%29%20%3D%3D%20120%22%5D&textReferences=false">editor
@@ -188,6 +184,7 @@
             </ul>
             <h4>Offline</h4>
             <ul>
+                <li><a href="https://codewith.mu/">Mu Editor</a></li>
                 <li><strong>Thonny</strong>:
                     <a href="https://thonny.org/">thonny.org</a>
                     <a href="https://pypi.org/project/thonny-black-format/">thonny-black-format</a>
@@ -205,6 +202,10 @@
                 <li><strong>Visual Studio Code</strong>:
                     <a href="https://code.visualstudio.com/Download">download</a>
                     <a href="https://code.visualstudio.com/docs/languages/python">setup for Python</a>
+                </li>
+                <li><strong>Processing Python</strong>:
+                    <a href="https://py.processing.org/">docs</a>
+                    <a href="https://py.processing.org/tutorials/gettingstarted/">install</a>
                 </li>
             </ul>
         </section>
@@ -234,9 +235,21 @@
                     <a href="https://kivy.org/#support">help</a>
                     <a href="https://github.com/niavlys/memoryKivy">memoryKivy</a>
                 </li>
-                <li><strong>guizero</strong>:
-                    <a href="https://magpi.raspberrypi.com/books/create-guis">pdf</a>
+                <li><strong>PygameZero</strong>:
+                    <a href="https://pygame-zero.readthedocs.io">docs</a>
+                </li>
+                <li><strong>GuiZero</strong>:
                     <a href="https://lawsie.github.io/guizero/">docs</a>
+                    <a href="https://magpi.raspberrypi.com/books/create-guis">pdf</a>
+                </li>
+                <li><strong>NetworkZero</strong>:
+                    <a href="https://networkzero.readthedocs.io">docs</a>
+                </li>
+                <li><strong>GPIOZero</strong>:
+                    <a href="https://gpiozero.readthedocs.io">docs</a>
+                </li>
+                <li><strong>AdventureLib</strong>:
+                    <a href="https://adventurelib.readthedocs.io">docs</a>
                 </li>
             </ul>
         </section>
