--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -27,6 +27,7 @@
                             <li><a href="https://maker.makecode.com">Maker</a></li>
                         </ul>
                     </li>
+                    <li><a href="https://microblocks.fun">MicroBlocksa</a></li>
                 </ul>
             </li>
             <li><strong>Scratch</strong>
@@ -82,6 +83,7 @@
                 <ul>
                     <li><a href="projects/microbit/tester.py">Tester</a></li>
                     <li><a href="projects/microbit/reaction.py">Reaction game</a></li>
+                    <li><a href="projects/microbit/screensaver.py">Screen saver</a></li>
                 </ul>
             </li>
         </ul>
