--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -21,13 +21,14 @@
                     <li><a href="https://arcade.makecode.com">Arcade</a></li>
                     <li><a href="https://microbit.makecode.com">Microbit</a></li>
                     <li><a href="https://minecraft.makecode.com">Minecraft</a> (requires Minecraft)</li>
+                    <li><a href="https://makecode.com/playground">Playground (custom blocks)</a></li>
                     <li><a href="https://makecode.com/labs">Labs</a>
                         <ul>
                             <li><a href="https://hwestphal.github.io/pxt-turtle">Turtle</a></li>
                             <li><a href="https://maker.makecode.com">Maker</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://microblocks.fun">MicroBlocksa</a></li>
+                    <li><a href="https://microblocks.fun">MicroBlocks</a></li>
                 </ul>
             </li>
             <li><strong>Scratch</strong>
@@ -207,6 +208,22 @@
                     <a href="https://trinket.io/python">get started</a>
                     <a href="https://trinket.io/python/845650c0d6">coordinates + headings</a>
                 </li>
+                <li><strong>pixelpad.io</strong>:
+                    <ul>
+                        <li><a href="https://pixelpad.io/pixelpad2d/">Documentation</a></li>
+                        <li><a href="https://pixelpad.io/">Main</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=Tf2mwcII4Lw&list=PLRdmBMLzntBGxk1IBvarJuKvG25k04ofP">PixelPAD - Tidbits</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=1RK3855C4U4&list=PLRdmBMLzntBH7CI9DjTP8kglZ-SWpwsw3">PixelPAD - Fruits Slasher tutorial</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=9YI61xUFA0U&list=PLRdmBMLzntBFnkAIw-X6-_oYZsPn6KOMx">PixelPAD - Platformer tutorial</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=mnonfPMeuCc&list=PLRdmBMLzntBFh-vphQ6JZ9lWTcR0vR7IB">PixelPAD - Castle Clash tutorial</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=iYkNDjqtG10&list=PLRdmBMLzntBEBrrNnyt8XuOi685_4gwWH">PixelPAD - Space Shooter tutorial</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=0kwI9Gl5tPI&list=PLRdmBMLzntBHIDXs6rHMsB4qUuyBqzvkE">PixelPAD - Action RPG tutorial</a></li>
+                        <li>Custom Class: 
+                            <a href="https://pixelpad.io/app/izxqpknajak/">project</a>
+                            <a href="pixelpad/Custom-Class.pp2d">pp2d</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
             <h4>Offline</h4>
             <ul>
@@ -275,6 +292,9 @@
                 </li>
                 <li><strong>AdventureLib</strong>:
                     <a href="https://adventurelib.readthedocs.io">docs</a>
+                </li>
+                <li><strong>pyttsx3</strong>:
+                    <a href="https://pyttsx3.readthedocs.io/en/latest/">docs</a>
                 </li>
             </ul>
         </section>
