--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -210,14 +210,22 @@
                 </li>
                 <li><strong>pixelpad.io</strong>:
                     <ul>
-                        <li><a href="https://pixelpad.io/pixelpad2d/">Documentation</a></li>
                         <li><a href="https://pixelpad.io/">Main</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=Tf2mwcII4Lw&list=PLRdmBMLzntBGxk1IBvarJuKvG25k04ofP">PixelPAD - Tidbits</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=1RK3855C4U4&list=PLRdmBMLzntBH7CI9DjTP8kglZ-SWpwsw3">PixelPAD - Fruits Slasher tutorial</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=9YI61xUFA0U&list=PLRdmBMLzntBFnkAIw-X6-_oYZsPn6KOMx">PixelPAD - Platformer tutorial</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=mnonfPMeuCc&list=PLRdmBMLzntBFh-vphQ6JZ9lWTcR0vR7IB">PixelPAD - Castle Clash tutorial</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=iYkNDjqtG10&list=PLRdmBMLzntBEBrrNnyt8XuOi685_4gwWH">PixelPAD - Space Shooter tutorial</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=0kwI9Gl5tPI&list=PLRdmBMLzntBHIDXs6rHMsB4qUuyBqzvkE">PixelPAD - Action RPG tutorial</a></li>
+                        <li><a href="https://pixelpad.io/pixelpad2d/">Documentation</a></li>
+                        <li><strong>PixelPAD tutorials</strong>:
+                            <ul>
+                                <li>Tidbits: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBGxk1IBvarJuKvG25k04ofP">videos</a></li>
+                                <li>Fruit Slashers: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBH7CI9DjTP8kglZ-SWpwsw3">videos</a></li>
+                                <li>Platformer: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBFnkAIw-X6-_oYZsPn6KOMx">videos</a></li>
+                                <li>Castle Clash: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBFh-vphQ6JZ9lWTcR0vR7IB">videos</a></li>
+                                <li>Space Shooter:
+                                    <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBEBrrNnyt8XuOi685_4gwWH">videos</a>
+                                    <a href="https://pixelpad.io/app/uzslboqgbrj/">project</a>
+                                    <a href="pixelpad/Space-Shooter.pp2d">pp2d</a>
+                                </li>
+                                <li>Action RPG: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBHIDXs6rHMsB4qUuyBqzvkE">videos</a></li>
+                            </ul>
+                        </li>
                         <li>Custom Class: 
                             <a href="https://pixelpad.io/app/izxqpknajak/">project</a>
                             <a href="pixelpad/Custom-Class.pp2d">pp2d</a>
