--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -215,7 +215,9 @@
                         <li><strong>PixelPAD tutorials</strong>:
                             <ul>
                                 <li>Tidbits: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBGxk1IBvarJuKvG25k04ofP">videos</a></li>
-                                <li>Fruit Slashers: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBH7CI9DjTP8kglZ-SWpwsw3">videos</a></li>
+                                <li>Fruit Slashers:
+                                    <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBH7CI9DjTP8kglZ-SWpwsw3">videos</a>
+                                </li>
                                 <li>Platformer: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBFnkAIw-X6-_oYZsPn6KOMx">videos</a></li>
                                 <li>Castle Clash: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBFh-vphQ6JZ9lWTcR0vR7IB">videos</a></li>
                                 <li>Space Shooter:
@@ -226,9 +228,15 @@
                                 <li>Action RPG: <a href="https://www.youtube.com/playlist?list=PLRdmBMLzntBHIDXs6rHMsB4qUuyBqzvkE">videos</a></li>
                             </ul>
                         </li>
-                        <li>Custom Class: 
-                            <a href="https://pixelpad.io/app/izxqpknajak/">project</a>
-                            <a href="pixelpad/Custom-Class.pp2d">pp2d</a>
+                        <li><strong>My PixelPAD apps</strong>:
+                            <ul>
+                                <li>Custom Classes: <a href="https://pixelpad.io/app/izxqpknajak/">project</a><a href="pixelpad/Custom-Classes.pp2d">pp2d</a></li>
+                                <li>Custom Rooms: <a href="https://pixelpad.io/app/ogqrqnqbdlh/">project</a><a href="pixelpad/Custom-Rooms.pp2d">pp2d</a></li>
+                                <li>Align & Bounds: <a href="https://pixelpad.io/app/ocnxddrztuj/">project</a><a href="pixelpad/Align-and-Bounds.pp2d">pp2d</a></li>
+                                <li>Concepts: <a href="https://pixelpad.io/app/nhoipkkcfki/">project</a><a href="pixelpad/Concepts.pp2d">pp2d</a></li>
+                                <li>Fruit Slashers: <a href="https://pixelpad.io/app/vpxzmxiibsk/">project</a><a href="pixelpad/Fruit-Slashers.pp2d">pp2d</a></li>
+                                <li>Space Shooter: <a href="https://pixelpad.io/app/uzslboqgbrj/">project</a><a href="pixelpad/Space-Shooter.pp2d">pp2d</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
