--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -34,7 +34,7 @@
             <li><strong>Scratch</strong>
                 <ul>
                     <li><a href="https://scratch.mit.edu/">Official site</a></li>
-                    <li><a href="https://scratch-tool.onrender.com/">Scratch Documenter</a></li>
+                    <li><a href="https://scratch-tool.icantech.org/">Scratch Documenter</a> - slow to start, be patient</li>
                     <li><a href="https://www.youtube.com/playlist?list=PLpfxVARjkP-_f-E9IU6IHmy5ECj0HqiLB">YouTube -
                             Scratch Team tutorials</a></li>
                     <li><a href="https://www.youtube.com/playlist?list=PLSgUBfi51uldLxNsADEYyXoXMuBTuR7om">YouTube -
