--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -80,6 +80,7 @@
             <li><strong>Introduction to text programming</strong>:
                 <a href="https://www.hedycode.com">Hedy</a>
                 <a href="https://strype.org/">Strype</a>
+                <a href="https://elan-lang.org/">ELAN</a>
             </li>
             <li><strong>Micro:bit projects</strong>:
                 <ul>
