Add Code Editor (RPF).

--- a/coderdojo/index.html
+++ b/coderdojo/index.html
@@ -189,6 +189,7 @@
             <h4>Online</h4>
             <ul>
                 <li><a href="https://strype.org/">Strype</a></li>
+                <li><a href="https://editor.raspberrypi.org/en-US/projects/blank-python-starter">Code Editor</a> (RPF)</li>
                 <li><a href="https://repl.it/languages/python3">repl.it</a></li>
                 <li><a href="https://colab.research.google.com/">Colaboratory (Colab)</a></li>
                 <li><a href="https://think.cs.vt.edu/blockpy/">BlockPy Editor</a></li>
